# battery-data-standard

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: cycler-import-failure.yml  documentation.yml
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  bdf-compatibility.md  current-sign.md  diagnostics.md  export-template.md  fixture-contribution.md  index.md  integrations.md  schema-compatibility.md  step-cycle-semantics.md  supported-formats.md  warning-codes.md
docs/integrations/: battery-archive.md  beep.md  cellpy.md  duckdb.md  polars.md  pybamm.md  pyprobe.md
examples/notebooks/: HPPC_MultiSine_F10_mat.ipynb  INR21700_M50T_T23_Aging_EIS_SOC20_W8_Channel_4.ipynb  bds_0_2_3_trust_diagnostics.ipynb  bds_real_data_trust_diagnostics.ipynb  zenodo_stack_pressure_arbin_workbook.ipynb  zenodo_stack_pressure_arbin_workbook.md
src/battery_data_standard/: __init__.py  __main__.py  api.py  archive.py  audit.py  cli.py  diagnostics.py  doctor.py  eis.py  exceptions.py  export.py  io.py  kind.py  profiles.py  quality.py  reporting.py  reports.py  schema.py  summary.py  time_sampling.py  validation.py
src/battery_data_standard/adapters/: __init__.py  arbin.py  base.py  basytec.py  biologic.py  generic.py  landt.py  maccor.py  neware.py  normalization.py  novonix.py  pec.py  registry.py  repower.py  simple.py
src/bds/: __init__.py
tests/: test_adapter_contracts.py  test_api.py  test_fixtures.py  test_real_probe_hardening.py  test_supporting_modules.py  test_zenodo_stack_pressure_fixture.py
tests/fixtures/arbin/: basic.csv  manifest.jsonl
tests/fixtures/basytec/: basic.csv  manifest.jsonl
tests/fixtures/biologic/: gcpl.mpt  manifest.jsonl
tests/fixtures/landt/: basic.csv  manifest.jsonl
tests/fixtures/maccor/: manifest.jsonl  tab_export.txt
tests/fixtures/neware/: flat.csv  manifest.jsonl
tests/fixtures/novonix/: basic.csv  manifest.jsonl
tests/fixtures/pec/: basic.csv  manifest.jsonl
tests/fixtures/repower/: basic.csv  manifest.jsonl
