[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-data-standard"
dynamic = ["version"]
description = "Converters and intake QA for battery cycler data."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Battery Data Standard contributors"}
]
keywords = ["battery", "cycler", "data-conversion", "data-standardization", "neware", "arbin"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed"
]
dependencies = [
  "polars>=0.20",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "xlrd>=2.0"
]

[project.urls]
Repository = "https://github.com/shiyunliu-battery/battery-data-standard"
Issues = "https://github.com/shiyunliu-battery/battery-data-standard/issues"
Changelog = "https://github.com/shiyunliu-battery/battery-data-standard/blob/main/CHANGELOG.md"
Documentation = "https://github.com/shiyunliu-battery/battery-data-standard#readme"

[project.optional-dependencies]
yaml = ["PyYAML>=6.0.3"]
matlab = ["scipy>=1.10", "h5py>=3.8"]
mpr = ["galvani>=0.5"]
test = ["pytest>=8.0", "pytest-cov>=5.0", "PyYAML>=6.0.3", "scipy>=1.10", "h5py>=3.8"]
dev = ["build>=1.2", "twine>=5.0", "pytest>=8.0", "pytest-cov>=5.0", "PyYAML>=6.0.3", "scipy>=1.10", "h5py>=3.8", "galvani>=0.5", "ruff>=0.8", "mypy>=1.0", "pip-audit>=2.7"]

[project.scripts]
bds = "battery_data_standard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
battery_data_standard = ["py.typed"]
bds = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "battery_data_standard._version.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra"]

[tool.coverage.run]
source = ["src/battery_data_standard"]
branch = true

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 110
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "RUF012", "RUF022"]

[tool.ruff.lint.isort]
known-first-party = ["battery_data_standard"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
disable_error_code = ["import-untyped", "assignment", "list-item", "arg-type"]
